fix: remove overflow-x property from body styles for improved layout

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -13,5 +13,4 @@ body{
     color: var(--primary-color);
     font-family: 'Poppins';
     font-size: 14px;
-    overflow-x: hidden;
 }
